{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 1210,
  "lineage": "db5c5043-29f3-7b9d-e005-7fa918e9e01f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fb81b6c46a68d2bb",
            "arn": "arn:aws:ec2:ap-south-1:949945086246:elastic-ip/eipalloc-0fb81b6c46a68d2bb",
            "association_id": "eipassoc-0199e1f10a2e9f1ab",
            "domain": "vpc",
            "id": "eipalloc-0fb81b6c46a68d2bb",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0d3e5e6c45ddf72db",
            "private_dns": "ip-10-2-0-122.ap-south-1.compute.internal",
            "private_ip": "10.2.0.122",
            "public_dns": "ec2-13-126-2-89.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.2.89",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "upscpro-stage2-nat-eip-1"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-nat-eip-1",
              "Project": "upscpro-stage2"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-044c588887e443436",
            "arn": "arn:aws:ec2:ap-south-1:949945086246:elastic-ip/eipalloc-044c588887e443436",
            "association_id": "eipassoc-0b75eb76122929b67",
            "domain": "vpc",
            "id": "eipalloc-044c588887e443436",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-06d9df40f046dd6f4",
            "private_dns": "ip-10-2-1-109.ap-south-1.compute.internal",
            "private_ip": "10.2.1.109",
            "public_dns": "ec2-13-203-250-198.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.203.250.198",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "upscpro-stage2-nat-eip-2"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-nat-eip-2",
              "Project": "upscpro-stage2"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "docker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087d1c9a513324697",
            "arn": "arn:aws:ec2:ap-south-1:949945086246:instance/i-07de8f288715f3c8e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07de8f288715f3c8e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "upscAppAwsKey-new",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f60bfc785c60822c",
            "private_dns": "ip-10-2-0-178.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.0.178",
            "public_dns": "ec2-43-204-36-154.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.204.36.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:949945086246:key/cdbe3e08-d78d-46c7-9d34-bec79c070b2a",
                "tags_all": {
                  "Environment": "stage2",
                  "ManagedBy": "terraform",
                  "Project": "upscpro-stage2"
                },
                "throughput": 125,
                "volume_id": "vol-0cde727273108b3f8",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a4efe17b2e95ab83",
            "tags": {
              "Name": "upscpro-stage2-docker",
              "Type": "docker"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-docker",
              "Project": "upscpro-stage2",
              "Type": "docker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b7774959a6491fb2"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.main",
            "aws_db_subnet_group.main",
            "aws_instance.strapi",
            "aws_lb.main",
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_security_group.ecs",
            "aws_security_group.rds",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "strapi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087d1c9a513324697",
            "arn": "arn:aws:ec2:ap-south-1:949945086246:instance/i-0486f87de5b5622ae",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0486f87de5b5622ae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "upscAppAwsKey-new",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01fc25a77c0274fe7",
            "private_dns": "ip-10-2-2-94.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.2.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:949945086246:key/cdbe3e08-d78d-46c7-9d34-bec79c070b2a",
                "tags_all": {
                  "Environment": "stage2",
                  "ManagedBy": "terraform",
                  "Project": "upscpro-stage2"
                },
                "throughput": 125,
                "volume_id": "vol-0e0dff5cccd5d02ff",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00c5c4be539481f78",
            "tags": {
              "Name": "upscpro-stage2-strapi",
              "Type": "strapi"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-strapi",
              "Project": "upscpro-stage2",
              "Type": "strapi"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b7774959a6491fb2"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:949945086246:internet-gateway/igw-086615262e28567cf",
            "id": "igw-086615262e28567cf",
            "owner_id": "949945086246",
            "tags": {
              "Name": "upscpro-stage2-igw"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-igw",
              "Project": "upscpro-stage2"
            },
            "vpc_id": "vpc-06644a03e910b9008"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:loadbalancer/app/upscpro-stage2-alb/137a30eb0a458650",
            "arn_suffix": "app/upscpro-stage2-alb/137a30eb0a458650",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "upscpro-stage2-alb-1379586870.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:loadbalancer/app/upscpro-stage2-alb/137a30eb0a458650",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "upscpro-stage2-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0087c0a131f8f1c4e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a4efe17b2e95ab83"
              },
              {
                "subnet_id": "subnet-0df7c0ff5ec3c031f"
              }
            ],
            "subnets": [
              "subnet-0a4efe17b2e95ab83",
              "subnet-0df7c0ff5ec3c031f"
            ],
            "tags": {
              "Name": "upscpro-stage2-alb"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-alb",
              "Project": "upscpro-stage2"
            },
            "vpc_id": "vpc-06644a03e910b9008",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:listener/app/upscpro-stage2-alb/137a30eb0a458650/69d927cbabdcd3ce",
            "certificate_arn": "arn:aws:acm:ap-south-1:949945086246:certificate/a06b3042-396f-435f-8a22-3f0570920bd8",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:targetgroup/upscpro-stage2-frontend-tg/4cddb16b0f0134ba",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:listener/app/upscpro-stage2-alb/137a30eb0a458650/69d927cbabdcd3ce",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:loadbalancer/app/upscpro-stage2-alb/137a30eb0a458650",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-2017-01",
            "tags": {},
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Project": "upscpro-stage2"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_acm_certificate.alb_test",
            "aws_acm_certificate.main",
            "aws_lb.main",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "tls_private_key.alb_test",
            "tls_self_signed_cert.alb_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "faculty_ui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:targetgroup/upscpro-stage2-faculty-ui-tg/fa2f31e8da202de6",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:listener-rule/app/upscpro-stage2-alb/137a30eb0a458650/69d927cbabdcd3ce/4f4ce88cbf015755",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/faculty*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:listener-rule/app/upscpro-stage2-alb/137a30eb0a458650/69d927cbabdcd3ce/4f4ce88cbf015755",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:listener/app/upscpro-stage2-alb/137a30eb0a458650/69d927cbabdcd3ce",
            "priority": 101,
            "tags": {},
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Project": "upscpro-stage2"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_acm_certificate.alb_test",
            "aws_acm_certificate.main",
            "aws_lb.main",
            "aws_lb_listener.main",
            "aws_lb_target_group.faculty_ui",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "tls_private_key.alb_test",
            "tls_self_signed_cert.alb_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "onboarding_ui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:targetgroup/upscpro-stage2-onboarding-ui-tg/2eb05d6f4037e8eb",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:listener-rule/app/upscpro-stage2-alb/137a30eb0a458650/69d927cbabdcd3ce/1e8b98f443e5fc47",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/onboarding*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:listener-rule/app/upscpro-stage2-alb/137a30eb0a458650/69d927cbabdcd3ce/1e8b98f443e5fc47",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:listener/app/upscpro-stage2-alb/137a30eb0a458650/69d927cbabdcd3ce",
            "priority": 100,
            "tags": {},
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Project": "upscpro-stage2"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_acm_certificate.alb_test",
            "aws_acm_certificate.main",
            "aws_lb.main",
            "aws_lb_listener.main",
            "aws_lb_target_group.frontend",
            "aws_lb_target_group.onboarding_ui",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "tls_private_key.alb_test",
            "tls_self_signed_cert.alb_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "faculty_ui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:targetgroup/upscpro-stage2-faculty-ui-tg/fa2f31e8da202de6",
            "arn_suffix": "targetgroup/upscpro-stage2-faculty-ui-tg/fa2f31e8da202de6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:targetgroup/upscpro-stage2-faculty-ui-tg/fa2f31e8da202de6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:949945086246:loadbalancer/app/upscpro-stage2-alb/137a30eb0a458650"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "upscpro-stage2-faculty-ui-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "upscpro-stage2-faculty-ui-tg"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-faculty-ui-tg",
              "Project": "upscpro-stage2"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06644a03e910b9008"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:targetgroup/upscpro-stage2-frontend-tg/4cddb16b0f0134ba",
            "arn_suffix": "targetgroup/upscpro-stage2-frontend-tg/4cddb16b0f0134ba",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:targetgroup/upscpro-stage2-frontend-tg/4cddb16b0f0134ba",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:949945086246:loadbalancer/app/upscpro-stage2-alb/137a30eb0a458650"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "upscpro-stage2-frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "upscpro-stage2-frontend-tg"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-frontend-tg",
              "Project": "upscpro-stage2"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06644a03e910b9008"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "onboarding_ui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:targetgroup/upscpro-stage2-onboarding-ui-tg/2eb05d6f4037e8eb",
            "arn_suffix": "targetgroup/upscpro-stage2-onboarding-ui-tg/2eb05d6f4037e8eb",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:targetgroup/upscpro-stage2-onboarding-ui-tg/2eb05d6f4037e8eb",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:949945086246:loadbalancer/app/upscpro-stage2-alb/137a30eb0a458650"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "upscpro-stage2-onboarding-ui-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "upscpro-stage2-onboarding-ui-tg"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-onboarding-ui-tg",
              "Project": "upscpro-stage2"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06644a03e910b9008"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fb81b6c46a68d2bb",
            "association_id": "eipassoc-0199e1f10a2e9f1ab",
            "connectivity_type": "public",
            "id": "nat-0f398988f7f06aa3e",
            "network_interface_id": "eni-0d3e5e6c45ddf72db",
            "private_ip": "10.2.0.122",
            "public_ip": "13.126.2.89",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a4efe17b2e95ab83",
            "tags": {
              "Name": "upscpro-stage2-nat-gateway-1"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-nat-gateway-1",
              "Project": "upscpro-stage2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-044c588887e443436",
            "association_id": "eipassoc-0b75eb76122929b67",
            "connectivity_type": "public",
            "id": "nat-09bdd27f910468119",
            "network_interface_id": "eni-06d9df40f046dd6f4",
            "private_ip": "10.2.1.109",
            "public_ip": "13.203.250.198",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0df7c0ff5ec3c031f",
            "tags": {
              "Name": "upscpro-stage2-nat-gateway-2"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-nat-gateway-2",
              "Project": "upscpro-stage2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:949945086246:route-table/rtb-0f01e39e399e1df93",
            "id": "rtb-0f01e39e399e1df93",
            "owner_id": "949945086246",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f398988f7f06aa3e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "upscpro-stage2-private-rt-1"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-private-rt-1",
              "Project": "upscpro-stage2"
            },
            "timeouts": null,
            "vpc_id": "vpc-06644a03e910b9008"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:949945086246:route-table/rtb-0552d1af9128bf009",
            "id": "rtb-0552d1af9128bf009",
            "owner_id": "949945086246",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09bdd27f910468119",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "upscpro-stage2-private-rt-2"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-private-rt-2",
              "Project": "upscpro-stage2"
            },
            "timeouts": null,
            "vpc_id": "vpc-06644a03e910b9008"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:949945086246:route-table/rtb-08e0d4184d47fa8cb",
            "id": "rtb-08e0d4184d47fa8cb",
            "owner_id": "949945086246",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-086615262e28567cf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "upscpro-stage2-public-rt"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-public-rt",
              "Project": "upscpro-stage2"
            },
            "timeouts": null,
            "vpc_id": "vpc-06644a03e910b9008"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0395f35da95d24509",
            "route_table_id": "rtb-0f01e39e399e1df93",
            "subnet_id": "subnet-00c5c4be539481f78"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d132b034a3d511e",
            "route_table_id": "rtb-0552d1af9128bf009",
            "subnet_id": "subnet-0cde2acd3870be3ec"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e81319e1a4dd81bf",
            "route_table_id": "rtb-08e0d4184d47fa8cb",
            "subnet_id": "subnet-0a4efe17b2e95ab83"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098722b3e447ee3f4",
            "route_table_id": "rtb-08e0d4184d47fa8cb",
            "subnet_id": "subnet-0df7c0ff5ec3c031f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:949945086246:security-group/sg-0087c0a131f8f1c4e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0087c0a131f8f1c4e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "upscpro-stage2-alb-20251025155559950000000002",
            "name_prefix": "upscpro-stage2-alb-",
            "owner_id": "949945086246",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "upscpro-stage2-alb-sg"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-alb-sg",
              "Project": "upscpro-stage2"
            },
            "timeouts": null,
            "vpc_id": "vpc-06644a03e910b9008"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:949945086246:security-group/sg-0b7774959a6491fb2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b7774959a6491fb2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 1337,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0087c0a131f8f1c4e"
                ],
                "self": false,
                "to_port": 1337
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0087c0a131f8f1c4e"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0087c0a131f8f1c4e"
                ],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0087c0a131f8f1c4e"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0087c0a131f8f1c4e"
                ],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "upscpro-stage2-ec2-20251025155602361100000005",
            "name_prefix": "upscpro-stage2-ec2-",
            "owner_id": "949945086246",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "upscpro-stage2-ec2-sg"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-ec2-sg",
              "Project": "upscpro-stage2"
            },
            "timeouts": null,
            "vpc_id": "vpc-06644a03e910b9008"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:949945086246:security-group/sg-03a8a79928fd1e78d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a8a79928fd1e78d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0087c0a131f8f1c4e"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "upscpro-stage2-ecs-20251025155602351000000004",
            "name_prefix": "upscpro-stage2-ecs-",
            "owner_id": "949945086246",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "upscpro-stage2-ecs-sg"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-ecs-sg",
              "Project": "upscpro-stage2"
            },
            "timeouts": null,
            "vpc_id": "vpc-06644a03e910b9008"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:949945086246:security-group/sg-07479726eb7dd6e99",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-07479726eb7dd6e99",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03a8a79928fd1e78d"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b7774959a6491fb2"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "upscpro-stage2-rds-20251025155604552500000006",
            "name_prefix": "upscpro-stage2-rds-",
            "owner_id": "949945086246",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "upscpro-stage2-rds-sg"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-rds-sg",
              "Project": "upscpro-stage2"
            },
            "timeouts": null,
            "vpc_id": "vpc-06644a03e910b9008"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_security_group.ecs",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:949945086246:subnet/subnet-00c5c4be539481f78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c5c4be539481f78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949945086246",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "upscpro-stage2-private-subnet-1",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-private-subnet-1",
              "Project": "upscpro-stage2",
              "Type": "private"
            },
            "vpc_id": "vpc-06644a03e910b9008"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:949945086246:subnet/subnet-0cde2acd3870be3ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.2.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cde2acd3870be3ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949945086246",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "upscpro-stage2-private-subnet-2",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-private-subnet-2",
              "Project": "upscpro-stage2",
              "Type": "private"
            },
            "vpc_id": "vpc-06644a03e910b9008"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:949945086246:subnet/subnet-0a4efe17b2e95ab83",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.2.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a4efe17b2e95ab83",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "949945086246",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "upscpro-stage2-public-subnet-1",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-public-subnet-1",
              "Project": "upscpro-stage2",
              "Type": "public"
            },
            "vpc_id": "vpc-06644a03e910b9008"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:949945086246:subnet/subnet-0df7c0ff5ec3c031f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df7c0ff5ec3c031f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "949945086246",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "upscpro-stage2-public-subnet-2",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-public-subnet-2",
              "Project": "upscpro-stage2",
              "Type": "public"
            },
            "vpc_id": "vpc-06644a03e910b9008"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:949945086246:vpc/vpc-06644a03e910b9008",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-032a9a4e0abdd0d5e",
            "default_route_table_id": "rtb-006e6ec70f446730b",
            "default_security_group_id": "sg-08e1b00acaa4b6e0c",
            "dhcp_options_id": "dopt-0392fd33e9c9f4e87",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06644a03e910b9008",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-006e6ec70f446730b",
            "owner_id": "949945086246",
            "tags": {
              "Name": "upscpro-stage2-vpc"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-vpc",
              "Project": "upscpro-stage2"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}